style.css
.img {
	box-sizing: content-box;
	width: 275px;
	height: 400px;
	margin: auto;
	align-items: center 0;
}
img {
	box-sizing: content-box;
	width: 275px;
	height: 400px;
	margin: auto;
	margin-bottom: 10px;
	align-items: 0 0;
	overflow: hidden;
	object-fit: cover;
}
.img-main {
	box-sizing: content-box;
	width: 275px;
	height: 400px;
	margin: auto;
	margin-bottom: 10px;
	align-items: center 0;
	overflow: hidden;
	border: 1px solid black;
}
.movie {
	font-size: 17.5px;
}
.mv-shadow{
	box-shadow: 5px 5px 10px yellow;
}
.character {
	font-size: 17.5px;
}
* {
	font-family: 'Audiowide', cursive;
	background-color: black;
	color: yellow;
	box-sizing: content-box;
	margin: 0;
	padding: 0;
	width: auto;
}
body {	
	margin: auto;
	padding: 0;
	box-sizing: content-box;
	width: 90vw;
}
a {
	text-decoration: none;
	color: yellow;
}
a:hover {
	text-decoration: none;
	color: yellow;
}
.padding-text {
	padding: 5px;
	padding-bottom: 15px;
}
.heading {
	padding: 0;
	margin: 0;
	font-size: 60px;
}
.empire {
	box-shadow: 5px 5px 10px #EB212E;
}
.republic {
	box-shadow: 5px 5px 10px #15f2fd;
}
.neither {
	box-shadow: 5px 5px 10px yellow;
}

